--- a/LNP/style.css
+++ b/LNP/style.css
@@ -76,10 +76,14 @@ a[aria-expanded="true"]::before {
 
 @media (max-width: 768px) {
     #sidebar {
-        margin-left: -240px;
+        margin-left: -210px;
     }
     #sidebar.active {
         margin-left: 0;
+    }
+    #glysearch,#testing
+    {
+        display: none!important;
     }
 }
 
@@ -168,6 +172,7 @@ ul ul a {
 .dropdown-menu 
 {
         min-width: 100 !important;
+        z-index: 123132 !important;
 }
 
 .navbar.navbar-default.affix {
@@ -294,14 +299,6 @@ a[aria-expanded="true"]::before {
     content: '\e260';
 }
 
-@media (max-width: 768px) {
-    #sidebar {
-        margin-left: -240px;
-    }
-    #sidebar.active {
-        margin-left: 0;
-    }
-}
 
 
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
@@ -455,6 +452,7 @@ ul.dropdown-menu li a {
     padding-bottom: 30px;
     position: relative;
     z-index: 9999 !important;
+    margin-bottom: 165.6px;
 }
 #footerContent
 {
@@ -480,7 +478,7 @@ a.dropdown-toggle:hover
 
 .progress-bar {
   height: 8px;
-  background: #4caf50;
+  background: #e60909;
   width: 0%;
 }
 
@@ -621,7 +619,147 @@ html {
     }
 }
 
+@media screen and (max-width:1199px)
+{
+    #image1,#image2,#image3,#image4,#image5,#image6
+    {
+        max-width: 215px !important;
+    }
+}
+@media screen and (max-width:1000px)
+{
+    #image1,#image2,#image3,#image4,#image5,#image6
+    {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+@media screen and (min-width:726.2px)
+{
+    #high1,#high2,#high3,#high4,#high5,#high6
+    {
+        font-size: 17px;
+    }
+    #newsContent1,#newsContent2,#newsContent3,#newsContent4,#newsContent5,#newsContent6
+    {
+        font-size: 21px;
+    }
+}
 
-
-
+    
+@media screen and (max-width:726px)
+{
+    #high1,#high2,#high3,#high4,#high5,#high6
+    {
+        font-size: 12px;
+    }
+    #newsContent1,#newsContent2,#newsContent3,#newsContent4,#newsContent5,#newsContent6
+    {
+        font-size: 14px;
+    }
+}
 /* ------------------------------*/
+
+
+/* Sign in section*/
+
+#signin
+{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    z-index:10 !important;
+    background-color: #e9e9e9;
+    display:none;
+}
+
+/* ---------------------------*?
+
+/* Icon */
+
+#nav-icon2 {
+}
+
+#nav-icon2 span {
+  display: block;
+  position: absolute;
+  height: 9px;
+  width: 50%;
+  background: #d3531a;
+  opacity: 1;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#nav-icon2 span:nth-child(even) {
+  left: 50%;
+  border-radius: 0 9px 9px 0;
+}
+
+#nav-icon2 span:nth-child(odd) {
+  left:0px;
+  border-radius: 9px 0 0 9px;
+}
+
+#nav-icon2 span:nth-child(1), #nav-icon2 span:nth-child(2) {
+  top: 0px;
+}
+
+#nav-icon2 span:nth-child(3), #nav-icon2 span:nth-child(4) {
+  top: 18px;
+}
+
+#nav-icon2 span:nth-child(5), #nav-icon2 span:nth-child(6) {
+  top: 36px;
+}
+
+#nav-icon2.open span:nth-child(1),#nav-icon2.open span:nth-child(6) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon2.open span:nth-child(2),#nav-icon2.open span:nth-child(5) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon2.open span:nth-child(1) {
+  left: 5px;
+  top: 7px;
+}
+
+#nav-icon2.open span:nth-child(2) {
+  left: calc(50% - 5px);
+  top: 7px;
+}
+
+#nav-icon2.open span:nth-child(3) {
+  left: -50%;
+  opacity: 0;
+}
+
+#nav-icon2.open span:nth-child(4) {
+  left: 100%;
+  opacity: 0;
+}
+
+#nav-icon2.open span:nth-child(5) {
+  left: 5px;
+  top: 29px;
+}
+
+#nav-icon2.open span:nth-child(6) {
+  left: calc(50% - 5px);
+  top: 29px;
+}
